# webidl

./: .gitignore  .gitmodules  NOTES.md  TODO.md  default.nix  dune-project  js_ffi.opam  jx_of_webidl.opam  onix-lock.json  onix.mk  webidl.opam
docs/: Ffi_guide.md
examples/maplibre_gl/: Maplibre_gl.ml  dune
js/: Js.ml  Js.mli  dune
js_ffi/lib/: Js_ffi.ml  Js_ffi.mli  dune
js_ffi/tests/: Index.ml  dune
jx_of_webidl/lib/: Analyze.ml  Gen.ml  Jx_of_webidl.ml  Prelude.ml  dune
jx_of_webidl/tests/: Attr_01.webidl  Basic.webidl  Dom.expected.mli  Dom.ml  Dom.webidl  Scratch.ml  Scratch.webidl  Scratch_partial_interface.webidl  Test_dom.ml  dune  index.html
play/: Poly.ml  dune  js_any.ml
play/_js_ffi/: Js_ffi.ml  Use_js_ffi.ml  dune  index.html  reflect.js
src/lib/: ast_to_data.ml  data.ml  dune  parse.ml
src/syntax/: ast.ml  dune  keyword.ml  parser.mly
stdweb/lib/: Dom.ml  Dom.webidl  Es6.ml  Es6.webidl  Es6_ast.ml  Es6_ast.webidl  Megadom.ml  Megadom.webidl  dune
stdweb/tests/: Test_dom.ml  dune
stdweb_codegen/lib/: Analyze.ml  Gen.ml  Prelude.ml  Stdweb_codegen.ml  dune
stdweb_codegen/tests/: Basic.ml  Basic.webidl  Basic_test.ml  Scratch.ml  Scratch.webidl  TestBinding.webidl  Test_operations.webidl  W3C_tests.webidl  W3c_tests.ml  dune
test/: test.idl  test.ml
webidl_ast/: dune  webidl_ast.ml
webidl_parser/: Webidl_parser.ml  dune  keyword.ml  lexer.mll  parser.mly
