opam-version: "2.0"
synopsis: "Generate Jx bindings from WEBIDL files"

maintainer: "Rizo Isrof <rizo@odis.io>"
authors: "Rizo Isrof <rizo@odis.io>"

build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "webidl"
  "ppxlib"
  "re" # snake_case

  "odoc" {with-doc}
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
  "utop" {with-dev-setup}
]
