

; Scratch.webidl
(rule
 (deps Scratch.webidl)
 (targets Scratch.actual.ml)
 (action
  (with-stdout-to
   Scratch.actual.ml
   (pipe-stdout
    (run %{bin:jx_of_webidl} %{deps} -)
    (run %{bin:ocamlformat} --impl -)))))


(rule
 (alias runtest)
 (action
  (diff Scratch.actual.ml Scratch.ml)))

(library
  (name scratch)
  (modules Scratch)
  (libraries js))


; Dom.webidl
(rule
 (deps Dom.webidl)
 (action
  (with-stdout-to
   Dom.actual.ml
   (pipe-stdout
    (run %{bin:jx_of_webidl} %{deps} -)
    (run %{bin:ocamlformat} --impl -)))))


(rule
 (alias runtest)
 (action
  (diff Dom.actual.ml Dom.ml)))

(library
  (name dom)
  (modules Dom)
  (libraries js))

;; Basic.webidl
;(rule
; (deps Basic.webidl)
; (action
;  (with-stdout-to
;   Basic.actual.mli
;   (pipe-stdout
;    (run %{bin:jx_of_webidl} %{deps} -)
;    (run %{bin:ocamlformat} --intf -)))))
;
;
;(rule
; (alias runtest)
; (action
;  (diff Basic.actual.mli Basic.expected.mli)))

