

; Scratch.webidl
(rule
 (deps Scratch.webidl)
 (targets Scratch.actual.ml)
 (action
  (with-stdout-to
   Scratch.actual.ml
   (pipe-stdout
    (run %{bin:stdweb_codegen} %{deps} -)
    (run %{bin:ocamlformat} --impl -)))))


(rule
 (alias runtest)
 (action
  (diff Scratch.actual.ml Scratch.ml)))

(library
  (name scratch)
  (modules Scratch)
  (libraries js))

;; Basic.webidl
;(rule
; (deps Basic.webidl)
; (action
;  (with-stdout-to
;   Basic.actual.mli
;   (pipe-stdout
;    (run %{bin:stdweb_codegen} %{deps} -)
;    (run %{bin:ocamlformat} --intf -)))))
;
;
;(rule
; (alias runtest)
; (action
;  (diff Basic.actual.mli Basic.expected.mli)))
