

; --- Scratch.webidl ---
(rule
 (deps Scratch.webidl)
 (targets Scratch.actual.ml)
 (action
  (with-stdout-to
   Scratch.actual.ml
   (pipe-stdout
    (run %{bin:stdweb_codegen} %{deps} -)
    (run %{bin:ocamlformat} --impl -)))))


;(rule
; (alias runtest)
; (action
;  (diff Scratch.actual.ml Scratch.ml)))

(library
  (name scratch)
  (modules Scratch)
  (libraries jx))

; Basic
(rule
 (deps Basic.webidl)
 (action
  (with-stdout-to
   Basic.actual.ml
   (pipe-stdout
    (run %{bin:stdweb_codegen} %{deps} -)
    (run %{bin:ocamlformat} --impl -)))))


(rule
 (alias runtest)
 (action
  (diff Basic.actual.ml Basic.ml)))

(library
  (name basic_test)
  (modules Basic_test Basic)
  (libraries jx))
